update login page

--- a/MakeItReal/accounts/templates/accounts/login.html
+++ b/MakeItReal/accounts/templates/accounts/login.html
@@ -41,7 +41,7 @@
 <body>
     <div class="login-container">
         <h2 class="form-title">Login</h2>
-        <form method="post" action="/login/">
+        <form method="post" action="/accounts/login_result/">
             {% csrf_token %}
             <div class="mb-3">
                 <label for="email" class="form-label">Email address</label>
