--- a/MakeItReal/accounts/templates/accounts/login.html
+++ b/MakeItReal/accounts/templates/accounts/login.html
@@ -67,7 +67,7 @@
             </div>
             <button type="submit" class="btn btn-blue w-100">Login</button>
             <div class="text-center mt-3">
-                <a href="/register/" class="text-decoration-none">Don't have an account? Register here</a>
+                <a href="/accounts/register/" class="text-decoration-none">Don't have an account? Register here</a>
             </div>
         </form>
     </div>
