--- a/MakeItReal/accounts/templates/accounts/register.html
+++ b/MakeItReal/accounts/templates/accounts/register.html
@@ -88,7 +88,7 @@
             </div>
             <button type="submit" class="btn btn-blue w-100">Sign Up</button>
             <div class="text-center mt-3">
-                <a href="/login/" class="text-decoration-none">Already have an account? Login here</a>
+                <a href="/accounts/login/" class="text-decoration-none">Already have an account? Login here</a>
             </div>
         </form>
     </div>
